--- a/packages/node-metas/package.json
+++ b/packages/node-metas/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@isc-logic-flow/node-metas",
+  "type": "module",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.ts",
+  "main": "src/metas.ts",
   "scripts": {},
   "keywords": [],
   "author": "",
