--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -6,5 +6,8 @@
   "scripts": {},
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "antd": "^5.15.4"
+  }
 }
