feat: README.md 文档完善

--- a/packages/designer/package.json
+++ b/packages/designer/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.tsx",
   "scripts": {},
   "keywords": [],
-  "author": "",
+  "author": "baixy",
   "license": "ISC",
   "dependencies": {
     "@isc-logic-flow/types": "workspace:*",
