--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.ts",
   "scripts": {},
   "keywords": [],
-  "author": "",
+  "author": "baixy",
   "license": "ISC",
   "dependencies": {
     "@isc-logic-flow/types": "workspace:*",
